# specrail-for-kiro

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.kiro/agents/: clarifier.md  learner.md  planner.md  verifier.md
.kiro/hooks/: pre-task-health-check.json
.kiro/hooks-exec/: post-task.sh
.kiro/specs/feature/: tasks.template.md
.kiro/state/: CHANGELOG_AI.md  DECISIONS.md  RISKS.md  STATE.md
.kiro/steering/: coding-standards.md  compliance.md  product.md  regulatory.md  tech.md
agents/: bugfix-investigator.md  codebase-mapper.md  planner.md  quick-change.md  report-generator.md  verifier.md
core/steering/: coding-standards.md  tech.md
docs/: concepts.md  vision.md
docs/examples/: java-legacy.md
hooks/: on-file-save-guardrails.md  on-spec-created.md  post-task-verification.md  pre-task-quality.md
packs/compliance/: README.md
packs/compliance/steering/: compliance.md  regulatory.md
packs/java-legacy/: README.md
packs/java-legacy/steering/: security.md  (+2 more)
packs/spring-boot/: README.md
power-kirorails/: POWER.md
power-kirorails/steering/: brownfield-patterns.md  delivery-workflow.md  sprint-management.md  truth-loop.md
scripts/: bootstrap.py  kirorails-ralph.sh  specrail-ralph.sh
src/kirorails/: __init__.py  __main__.py  cli.py  installer.py  phantom.py  scanner.py  sprint.py
src/specrail/: __init__.py  __main__.py  cli.py  installer.py  sprint.py
templates/state/: DECISIONS.md  STATE.md
templates/steering/: brownfield-java.md  coding-standards.md  mcp.md  postgres.md  product.md  security.md  structure.md  team.md  tech.md  testing.md
(+77 files in other folders)
