[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specrail"
version = "1.0.0"
description = "Professional-grade delivery kit for AI-assisted development. The Tech Lead your AI agent needs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["click>=8.0"]
keywords = ["kiro", "ai", "delivery", "brownfield", "guardrails", "verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/SergioPacheco/specrail-for-kiro"

[project.scripts]
specrail = "specrail.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/specrail"]
